<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Messaging</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registration_form">REGISTRATION</string>
    <string name="confirmation_form">CONFIRMATION</string>
    <string name="registerbtn">REGISTER</string>
    <string name="confirmationbtn">CONFIRM</string>
    <string name="confirmationCode">Enter the confirmation code</string>
    <string name="username">Username</string>
    <string name="emailid">Email</string>

    <string name="savebtn">SAVE</string>
    <string name="editbtn">EDIT</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="profileEmailId">Email</string>
    <string name="ProfilephoneNo">Phone</string>

    <string name="welcome_txt">GCM App</string>
    <string name="email">Email Address</string>
    <string name="login">Register Me</string>
    <string name="defaultmsg">Message sent by server will appear here.</string>
    <string name="msg_title">Message</string>
    <string name="user_title">Hello User</string>

</resources>
