<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/headerlayout"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/bg_button_rounded">
        <TextView android:text="@string/confirmation_form"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/White"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textColor="@color/White"
            android:text="@string/confirmationCode"/>
        <EditText
            android:id="@+id/ETxtConfirmationCode"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:background="@drawable/bg_form_rounded"
            android:focusable="true"
             />
        <Button
            android:id="@+id/butnConfirm"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:onClick="OnclickConfirm"
            android:text="@string/confirmationbtn"
            android:textColor="@color/White"
            android:background="@drawable/bg_button_rounded"
            />


    </LinearLayout>

</RelativeLayout>
