<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/headerlayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/Maroon">
        <TextView android:text="@string/registration_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/White"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_height="300dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/username"/>
        <EditText
            android:id="@+id/ETxtUsername"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/emailid"/>
        <EditText
            android:id="@+id/ETxtEmail"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            />
        <Button
            android:id="@+id/butnRegister"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:text="REGISTER"
            android:textColor="@color/White"
            android:background="@color/Maroon"
            />


    </LinearLayout>

</RelativeLayout>
