<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
   >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_marginTop="5dp"
           android:onClick="BackToMessages"
            android:layout_width="50dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/backred"
           android:layout_height="30dp" />
        <ImageButton
            android:id="@+id/editBtn"
            android:layout_weight=".5"
            android:layout_marginTop="5dp"
            android:onClick="EditProfileDetails"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/editred"
           />
    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight=".40"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="horizontal"
   >

    <ImageView
         android:src="@drawable/userimage"
        android:layout_height="match_parent"
        android:layout_width="@dimen/abc_control_inset_material"
        android:layout_marginTop="5dp"
        android:layout_weight=".35"

        android:id="@+id/imageView" />
    <!--android:scaleType="centerInside"-->
    <TextView
        android:id="@+id/UserNameTxTView"
        android:layout_width="wrap_content"
        android:layout_weight=".65"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/White"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:text="User Name"/>
</LinearLayout>
<LinearLayout
    android:layout_weight=".60"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="fill_parent"
        android:layout_weight=".75"
        android:textColor="@color/White"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/firstname"/>

    <EditText
        android:id="@+id/ETxtFirstName"
        android:layout_weight=".25"
        android:background="@drawable/bg_form_rounded"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="text"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_weight=".75"
            android:textSize="15dp"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:text="@string/lastname"/>
        <EditText
            android:id="@+id/ETxtLastName"
            android:background="@drawable/bg_form_rounded"
            android:layout_weight=".25"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="text"
             />
    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<TextView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_weight=".75"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/profileEmailId"/>-->
        <!--<EditText-->
            <!--android:id="@+id/ETxtemail"-->
            <!--android:layout_weight=".25"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:inputType="textEmailAddress"-->
            <!--/>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_weight=".75"
            android:textSize="15dp"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:text="@string/emailid"/>
        <EditText
            android:id="@+id/ETxtemail"
            android:background="@drawable/bg_form_rounded"
            android:layout_weight=".25"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_weight=".75"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:text="@string/ProfilephoneNo"/>
        <EditText
            android:id="@+id/ETxtPhone"
            android:background="@drawable/bg_form_rounded"
            android:layout_weight=".25"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="phone"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"


        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_centerVertical="true"

        >
        <Button
            android:textColor="@color/White"
            android:id="@+id/SaveBtn"
            android:onClick="SaveProfileDetails"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/savebtn"
            android:layout_height="35dp
            " />

    </LinearLayout>

</LinearLayout>


</LinearLayout>
